--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
 body {
-    background-color: #0000FF;
+    background-color: rgba(0,0,255,0.2);
+}
+section div{
+    border-bottom: thick dotted #0000FF;
 }
